5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3989/executions/1798_2572.log
== TEST (2019-06-07 21:17:43) 
-- CODE:
vet = array(eval(input("Primeiro vetor:")))

grupo1=0
grupo2=0

	for elemento in vet:
		if (elemento%2==0):
		    grupo1= grupo1 + 2
		else:
			grupo2= grupo2 + 2
			
	print(grupo2)
-- ERROR:
File "XXXX", line 6
    for elemento in vet:
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 21:17:59) 
-- CODE:
vet = array(eval(input("Primeiro vetor:")))
grupo1=0
grupo2=0

	for elemento in vet:
		if (elemento%2==0):
		    grupo1= grupo1 + 2
		else:
			grupo2= grupo2 + 2
			
	print(grupo2)
-- ERROR:
File "XXXX", line 5
    for elemento in vet:
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 21:18:12) 
-- CODE:
vet = array(eval(input("Primeiro vetor:")))
grupo1=0
grupo2=0

for elemento in vet:
		if (elemento%2==0):
		    grupo1= grupo1 + 2
		else:
			grupo2= grupo2 + 2
			
	print(grupo2)
-- ERROR:
File "XXXX", line 11
    print(grupo2)
                ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 21:18:19) 
-- CODE:
vet = array(eval(input("Primeiro vetor:")))
grupo1=0
grupo2=0

for elemento in vet:
		if (elemento%2==0):
		    grupo1= grupo1 + 2
		else:
			grupo2= grupo2 + 2
			
print(grupo2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vet = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 21:18:33) 
-- CODE:
from numpy import*
vet = array(eval(input("Primeiro vetor:")))
grupo1=0
grupo2=0

for elemento in vet:
		if (elemento%2==0):
		    grupo1= grupo1 + 2
		else:
			grupo2= grupo2 + 2
			
print(grupo2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 21:19:54) 
-- CODE:
from numpy import*
vet = array(eval(input("Primeiro vetor:")))
grupo1=0
grupo2=0

for elemento in vet:
		if (elemento%2==0):
		    grupo1= grupo1 + 1
		else:
			grupo2= grupo2 + 1
			
print(grupo2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 21:21:30) 
-- CODE:
from numpy import*
vet = zeros(2, dtype=int)

grupo1=0
grupo2=0

for elemento in vet:
		if (elemento%2==0):
		    grupo1= grupo1 + 1
		else:
			grupo2= grupo2 + 1
			
print(grupo2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 11:31:48) 
-- CODE:
from numpy import*

vet = array(eval(input(" ")))
g2 = 0
for i in range(size(vet)):
	if (vet[i] % 2 != 0):
		g2 = g2 + 1
vetor = zeros(g2, dtype=int)
cont = 0
for i in range(size(vet)):
	if(vet[i] % 2 != 0):
		vetor[cont] = vet[i]
		cont = cont + 1
print(vetor)

-- EXECUTION TIME:
1.16784
-- TEST CASE 1:
---- input:
[75247561,76546316,75713658,97135671,70356874]
---- correct output:
[75247561 97135671]
---- user output:
[75247561 97135671]
-- TEST CASE 2:
---- input:
[13017594,57417542,85024758,12475981,75942785,91875987,29584192,85794217]
---- correct output:
[12475981 75942785 91875987 85794217]
---- user output:
[12475981 75942785 91875987 85794217]
-- TEST CASE 3:
---- input:
[31874903,74902746,23742046]
---- correct output:
[31874903]
---- user output:
[31874903]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
